# Planto-AI-Research-intern

./: README.md
Agent3-9/: requirements.txt
Agent3-9/CODING AGENTS/: Coding Agent.py  RAG Agent.py  README.md  Summarizer Agent.py  experiment1.py  pyproject.toml
Agent3-9/CODING AGENTS/src/codingagent1/: codingAgentt.py  crew.py  main.py
Agent3-9/summarizer agent/: README.md  app.py  crew.yaml  env.example  pyproject.toml  requirements.txt  run.py
Agent3-9/summarizer agent/crew/: agents.py  config.py  flow.py  tasks.py
Agent3-9/summarizer agent/crew/prompts/: coder.md  parser.md  summarizer.md  supervisor.md
Agent3-9/summarizer agent/crew/tools/: code_writer_tool.py  coding_agent_bridge.py  compression_tool.py  crew.py  gemini_embedder.py  rag_tool.py  web_search_tool.py
Agent3-9/summarizer agent/outputs/c9a6be59/: plan.md
Agent3-9/summarizer agent/outputs/test_session/: project_plan.md
Agent3-9/summarizer agent/src/multi_agent_bot/: crew.py  main.py
Agent3-9/summarizer agent/src/multi_agent_bot/config/: agents.yaml  tasks.yaml
Agent3-9/utils/: README.md  config.py  requirements.txt
Agent3-9/utils/utils/: compressor.py  embedder.py  pdf_loader.py  retriever.py  vectorstore.py
hugging face tutorial/: huggingfacepractice.ipynb
langchain llm/: langchain20.ipynb
text-prompt-compression-contextual-memory/: app.py  requirements.txt
