[project]
name = "multi_agent_bot"
version = "0.1.0"
description = "multi-agent-bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
multi_agent_bot = "multi_agent_bot.main:run"
run_crew = "multi_agent_bot.main:run"
train = "multi_agent_bot.main:train"
replay = "multi_agent_bot.main:replay"
test = "multi_agent_bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
